Update to themes fixes tabs in FF, calendars in FF, and vertical alignment of editor text in FF and IE
git-svn-id: https://src.springsource.com/svn/wm_svn/eng3/trunk@30669 bab4cc61-abf4-0310-9601-8b162d8b0fb1

--- a/dev/studio/webapproot/app/templates/themes/calendar.css
+++ b/dev/studio/webapproot/app/templates/themes/calendar.css
@@ -80,6 +80,8 @@
     border-color: #666666; /* Borders-Clickable_Border_Color */
     border-right-width: 1px;
     border-top-width: 1px;
+    border-left-width: 0px;
+    border-bottom-width: 0px;
 }
 
 .wm_template .dijitCalendarContainer td.dijitCalendarSelectedDate,
